force-app/main/default/objects/SS_Product_Settings__mdt/SS_Product_Settings__mdt.object-meta.xml
<CustomObject>
    <description>7Summits Product Catalog component settings</description>
    <label>SS Product Setting</label>
    <pluralLabel>SS Product Settings</pluralLabel>
</CustomObject>