force-app/main/default/objects/SS_Product_Settings__mdt/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Default account ID for internal users</description>
    <inlineHelpText>Set a default account ID for internal users</inlineHelpText>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>