force-app/main/default/objects/SS_Product_Settings__mdt/fields/Action_Set__c.field-meta.xml
<CustomField>
    <fullName>Action_Set__c</fullName>
    <inlineHelpText>Associate an action set for this product setting</inlineHelpText>
    <label>Action Set</label>
    <referenceTo>SS_Product_Action_Set__mdt</referenceTo>
    <relationshipLabel>SS Product Settings</relationshipLabel>
    <relationshipName>SS_Product_Settings_Set</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>