force-app/main/default/objects/SS_Product_Settings__mdt/fields/Enable_Discount__c.field-meta.xml
<CustomField>
    <fullName>Enable_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable cart summary discount</description>
    <inlineHelpText>Check to enable discount</inlineHelpText>
    <label>Enable Discount</label>
    <type>Checkbox</type>
</CustomField>