force-app/main/default/objects/SS_Product_Settings__mdt/fields/Hide_Add_to_Cart__c.field-meta.xml
<CustomField>
    <fullName>Hide_Add_to_Cart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide product add to cart button</description>
    <inlineHelpText>Check to hide the Add to Cart button in the product catalog.</inlineHelpText>
    <label>Hide Add to Cart</label>
    <type>Checkbox</type>
</CustomField>