force-app/main/default/objects/SS_Product_Settings__mdt/fields/Hide_Images__c.field-meta.xml
<CustomField>
    <fullName>Hide_Images__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide product images</description>
    <inlineHelpText>Check to hide all image in the product catalog</inlineHelpText>
    <label>Hide Images</label>
    <type>Checkbox</type>
</CustomField>