force-app/main/default/objects/SS_Product_Settings__mdt/fields/Hide_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Hide_Unit_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hide product unit price</description>
    <inlineHelpText>Check to hide the product unit price</inlineHelpText>
    <label>Hide Unit Price</label>
    <type>Checkbox</type>
</CustomField>