force-app/main/default/objects/SS_Product_Settings__mdt/fields/Pricebook_Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Id__c</fullName>
    <description>Pricebook ID to use for the product catalog</description>
    <inlineHelpText>Enter the price book ID to use for the product catalog</inlineHelpText>
    <label>Pricebook Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>