force-app/main/default/objects/SS_Product_Settings__mdt/fields/Product_Family_List_IDs__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_List_IDs__c</fullName>
    <description>List of product IDs to use for product family tile view.</description>
    <inlineHelpText>List of product IDs to use for product family tile view images.</inlineHelpText>
    <label>Product Family List IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>