force-app/main/default/objects/SS_Product_Settings__mdt/fields/Quantity_List__c.field-meta.xml
<CustomField>
    <fullName>Quantity_List__c</fullName>
    <defaultValue>&quot;1,2,3,4,5,6,7,8,9,10,15,20,30,50&quot;</defaultValue>
    <description>Quantity option list</description>
    <inlineHelpText>CSV list of quantity options</inlineHelpText>
    <label>Quantity List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>