force-app/main/default/objects/SS_Product_Settings__mdt/fields/Suggest_Email__c.field-meta.xml
<CustomField>
    <fullName>Suggest_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send contact an email when suggesting a product - default is unchecked</description>
    <inlineHelpText>Send an email to a contact when suggesting a product - uncheck for sanbox</inlineHelpText>
    <label>Suggest Send Email</label>
    <type>Checkbox</type>
</CustomField>