force-app/main/default/objects/SS_Product_Settings__mdt/fields/Use_Points__c.field-meta.xml
<CustomField>
    <fullName>Use_Points__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use Points rather than Currency when this is checked</description>
    <inlineHelpText>Check to enable points rather than currency for product.</inlineHelpText>
    <label>Use Points</label>
    <type>Checkbox</type>
</CustomField>